--- a/config/content.htm
+++ b/config/content.htm
@@ -4,6 +4,7 @@
 <p>倉儲連結:<a href="https://github.com/mdecad2022/site-Yao-Hsien41023241">https://github.com/mdecad2022/site-Yao-Hsien41023241</a></p>
 <h1>hw</h1>
 <h2>w6</h2>
+<p>column support</p>
 <p>
 <script>
 var winkVideoData = {
@@ -15,10 +16,15 @@ var winkVideoData = {
   },
 };
 </script>
-<!-- 接下來將 mp4 檔案從 downloads 目錄取出 --></p>
+</p>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="/downloads/w6-01.mp4" type="video/mp4"/></video></div>
-<h2>w10</h2>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass">column</div>
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
+<source src="/downloads/column.mp4" type="video/mp4"/></video></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div><h2>w10</h2>
 <p>這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕.</p>
 <p><button id="add1to100">缺考</button></p>
 <p>將 iterable 與 iterator <a href="https://home.gamer.com.tw/creationDetail.php?sn=4337438">相關說明</a>, 利用 Brython 與 Ace Editor 整理在這個頁面.</p>
