--- a/content/w6.html
+++ b/content/w6.html
@@ -142,6 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">hw << <a href='hw.html'>Previous</a> <a href='w10.html'>Next</a> >> w10<br /><h1>w6</h1>
+<p>column support</p>
 <p>
 <script>
 var winkVideoData = {
@@ -153,10 +154,15 @@ var winkVideoData = {
   },
 };
 </script>
-<!-- 接下來將 mp4 檔案從 downloads 目錄取出 --></p>
+</p>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="./../downloads/w6-01.mp4" type="video/mp4"/></video></div>
-<br />hw << <a href='hw.html'>Previous</a> <a href='w10.html'>Next</a> >> w10</div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass">column</div>
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
+<source src="./../downloads/column.mp4" type="video/mp4"/></video></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div><br />hw << <a href='hw.html'>Previous</a> <a href='w10.html'>Next</a> >> w10</div>
         
     <!-- footer -->
       <div class="container">
