--- a/content/NX.html
+++ b/content/NX.html
@@ -157,12 +157,9 @@ var winkVideoData = {
 };
 </script>
 </p>
-<div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass">column</div>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="./../downloads/column.mp4" type="video/mp4"/></video></div>
-<div class="winkVideoContainerClass"></div>
-<div class="winkVideoContainerClass"></div>
 <p>
 <script>
 var winkVideoData = {
@@ -177,7 +174,20 @@ var winkVideoData = {
 </p>
 <div class="winkVideoContainerClass">table-1</div>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
-<source src="./../downloads/table-1.mp4" type="video/mp4"/></video></div><br />onshape-1 << <a href='onshape-1.html'>Previous</a> <a href='w10.html'>Next</a> >> w10</div>
+<source src="./../downloads/table-1.mp4" type="video/mp4"/></video></div>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 8,
+  buttonFrameLength: 4,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<div class="winkVideoContainerClass">table-2</div>
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
+<source src="./../downloads/table-2.mp4" type="video/mp4"/></video></div><br />onshape-1 << <a href='onshape-1.html'>Previous</a> <a href='w10.html'>Next</a> >> w10</div>
         
     <!-- footer -->
       <div class="container">
