--- a/config/content.htm
+++ b/config/content.htm
@@ -174,6 +174,7 @@ var winkVideoData = {
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="/downloads/part1-1-onshape.mp4" type="video/mp4"/></video></div>
 <div class="winkVideoContainerClass"></div><h3>NX</h3>
+<p><a href="/downloads/鑽台nx.zip">鑽台nx.zip</a></p>
 <p>column support</p>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="/downloads/w6-01.mp4" type="video/mp4"/></video></div>
