--- a/content/NX.html
+++ b/content/NX.html
@@ -142,6 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Onshape << <a href='Onshape.html'>Previous</a> <a href='w10.html'>Next</a> >> w10<br /><h1>NX</h1>
+<p><a href="./../downloads/鑽台nx.zip">鑽台nx.zip</a></p>
 <p>column support</p>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="./../downloads/w6-01.mp4" type="video/mp4"/></video></div>
